--- a/src/site/_includes/navigation-primary.html
+++ b/src/site/_includes/navigation-primary.html
@@ -1,8 +1,8 @@
 <ul>
     {%- set nav = [
-        { title: 'Blog', url: '/blog/' },
         { title: 'About', url: '/about' },
-        { title: 'Portfolio', url: '/portfolio/' },
+        { title: 'Research', url: '/portfolio/' },
+        { title: 'Teaching', url: '/resources/' },
         { title: 'Contact', url: '/contact' }
     ] %}
     {%- for item in nav %}
