--- a/src/site/_includes/navigation-primary.html
+++ b/src/site/_includes/navigation-primary.html
@@ -1,7 +1,7 @@
 <ul>
     {%- set nav = [
         { title: 'About', url: '/about' },
-        { title: 'Research', url: '/portfolio/' },
+        { title: 'Research', url: '/research/' },
         { title: 'Teaching', url: '/resources/' },
         { title: 'Contact', url: '/contact' }
     ] %}
