--- a/src/site/_includes/more-posts.html
+++ b/src/site/_includes/more-posts.html
@@ -13,12 +13,17 @@
     {%- set typeOfThing = 'case studies' %}
     {%- set linkToList = '/portfolio/' %}
     {%- set items = collections['case-study'] %}
+{%- elif tags.includes('project') %}
+    {%- set caseStudy = true %}
+    {%- set typeOfThing = 'research projects' %}
+    {%- set linkToList = '/research/' %}
+    {%- set items = collections['project'] %}
 {%- endif %}
 <section aria-labelledby="further-reading-heading" class="teaser">
     <h2 id="further-reading-heading">More {{ typeOfThing }}</h2>
     <p>Here are a couple more {{ typeOfThing }} for you to enjoy. If that’s not enough, have a look at <a href="{{ linkToList }}">the full list</a>.</p>
     <ol class="hfeed index-list" reversed>
-        {%- for post in collections.post | reverse | removeCurrent(title) | promoteRelated(related) | limit(2) %}
+        {%- for post in items | reverse | removeCurrent(title) | promoteRelated(related) | limit(2) %}
             {% include "post-in-list.html" %}
         {%- endfor %}
     </ol>
