Setup for teaching content.

--- a/src/site/_includes/navigation-primary.html
+++ b/src/site/_includes/navigation-primary.html
@@ -2,7 +2,7 @@
     {%- set nav = [
         { title: 'About', url: '/about' },
         { title: 'Research', url: '/research/' },
-        { title: 'Teaching', url: '/resources/' },
+        { title: 'Teaching', url: '/teaching/' },
         { title: 'Contact', url: '/contact' }
     ] %}
     {%- for item in nav %}
