--- a/src/site/_includes/post-in-list.html
+++ b/src/site/_includes/post-in-list.html
@@ -31,6 +31,16 @@
                 {% include "post-categories.html" %}
             </p>
 
+        {% elif post.data.tags.includes('project') %}
+            <p class="details">
+                Status:
+                {% if post.data.status %}
+                    {{post.data.status}}
+                {% else %}
+                    ongoing
+                {% endif -%}
+            </p>
+
         {% else %}
             <p class="details">
                 posted {{ post.data.date | date }}
