Added service section.

--- a/src/site/_includes/post-in-list.html
+++ b/src/site/_includes/post-in-list.html
@@ -1,4 +1,4 @@
-{%- if (tags.length >= 1 and (blogPost or resource or 'case-study' or 'teaching')) or home %}
+{%- if (tags.length >= 1 and (blogPost or resource or 'case-study' or 'teaching' or 'project')) or home %}
     {%- set briefPostInList = true %}
 {%- endif -%}
 
