--- a/src/site/_includes/call-to-action.html
+++ b/src/site/_includes/call-to-action.html
@@ -1,25 +1,20 @@
-{%- if tags.length >= 1 and tags.includes('post') %}
-    {%- set post = true %}
-{%- elif tags.length >= 1 and tags.includes('resource') %}
-    {%- set resource = true %}
-{%- elif tags.length >= 1 and tags.includes('testimonial') %}
-    {%- set testimonial = true %}
-{%- elif tags.length >= 1 and tags.includes('case-study') %}
-    {%- set caseStudy = true %}
+{%- if tags.length >= 1 and tags.includes('service') %}
+    {%- set service = true %}
+{%- elif tags.length >= 1 and tags.includes('teaching') %}
+    {%- set teaching = true %}
 {%- endif %}
 <section aria-labelledby="ctaLabel" class="call-to-action">
-    {% if resource or testimonial or caseStudy %}
-        <h2 id="ctaLabel">Hire me</h2>
-        <p>If you like what you’ve read and think we’d work well together, I’d love to hear from you.</p>
-        <a href="/contact">Contact me now</a>
+    {% if teaching %}
+        <h2 id="ctaLabel">Interested in writing a thesis?</h2>
+        <p>If you'd are interested in writing your thesis with me, just give me a shout and we will see what we can do.</p>
+        <a href="/contact">Contact me</a>
+    {% elif cta.custom %}
+        <h2 id="ctaLabel">{{cta.headline}}</h2>
+        {{ cta.intro | markdown | safe }}
+        <a href="/contact">Contact me</a>
     {% else %}
-        <h2 id="ctaLabel">Accessibility in your inbox</h2>
-        <p>I send an accessibility-centric newsletter on the last day of every month, containing:</p>
-        <ul>
-            <li>A roundup of the articles I’ve posted</li>
-            <li>A hot pick from my archives</li>
-            <li>Some interesting posts from around the web</li>
-        </ul>
-        {% include "newsletter-signup.html" %}
+        <h2 id="ctaLabel">Academic work is team work</h2>
+        <p>If you'd like to get together, share ideas or collaborate, I’d love to hear from you.</p>
+        <a href="/contact">Contact me</a>
     {% endif %}
 </section>
