Added theses section.

--- a/src/site/_includes/navigation-secondary.html
+++ b/src/site/_includes/navigation-secondary.html
@@ -3,8 +3,7 @@
         { title: 'Home', url: '/' },
         { title: 'Categories', url: '/categories' },
         { title: 'Service', url: '/service/' },
-        { title: 'Testimonials', url: '/testimonials' },
-        { title: 'Resources', url: '/resources' },
+        { title: 'Theses', url: '/theses' },
         { title: 'Subscribe', url: '/subscribe' },
         { title: 'Colophon', url: '/colophon' }
     ] %}
