--- a/src/site/_includes/navigation-secondary.html
+++ b/src/site/_includes/navigation-secondary.html
@@ -2,10 +2,10 @@
     {% set nav = [
         { title: 'Home', url: '/' },
         { title: 'Categories', url: '/categories' },
-        { title: 'Service', url: '/service/' },
-        { title: 'Theses', url: '/theses' },
-        { title: 'Subscribe', url: '/subscribe' },
-        { title: 'Colophon', url: '/colophon' }
+        { title: 'Publications', url: '/publications/' },
+        { title: 'Dissemination', url: '/dissemination/' },
+        { title: 'Supervising', url: '/theses' },
+        { title: 'Functions', url: '/service/' }
     ] %}
     {% for item in nav %}
         <li>
