--- a/src/site/_includes/post-in-list.html
+++ b/src/site/_includes/post-in-list.html
@@ -1,4 +1,4 @@
-{%- if (tags.length >= 1 and (blogPost or resource or 'case-study' or 'teaching' or 'project' or 'service' or 'theses')) or home %}
+{%- if (tags.length >= 1 and (blogPost or resource or 'case-study' or 'teaching' or 'project' or 'service' or 'theses' or 'publication')) or home %}
     {%- set briefPostInList = true %}
 {%- endif -%}
 
@@ -25,11 +25,10 @@
 
         {% elif post.data.tags.includes('publication') %}
             <p class="details">
-                A {{post.data.type}}
-                {%- set people = post.data.collaborators %}
-                {%- set praefix = 'co-authored by' %}
-                {% include "post-collaborators.html" %}
                 {% include "post-categories.html" %}
+            </p>
+            <p class="details">
+                {% include "post-citation.html" %}
             </p>
 
         {% elif post.data.tags.includes('dissemination') %}
