First working version of landing page.

--- a/src/site/_includes/post-in-list.html
+++ b/src/site/_includes/post-in-list.html
@@ -25,6 +25,7 @@
 
         {% elif post.data.tags.includes('publication') %}
             <p class="details">
+                A publication
                 {% include "post-categories.html" %}
             </p>
             <p class="details">
