--- a/src/site/_includes/footer.html
+++ b/src/site/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
     <div class="social">
-        <a href="https://mastodon.social/{{ site.author.mastodon | replace('@mastodon.social','')}}">
-            {%- include "svg/mastodon.svg" -%}
-            Follow me on Mastodon
+        <a href="{{ site.author.linkedin }}">
+            {%- include "svg/LinkedIn.svg" -%}
+            Let's connect on LinkedIn
         </a>
     </div>
     <nav aria-label="repeated primary">
@@ -11,20 +11,17 @@
     <nav aria-label="secondary">
         {% include "navigation-secondary.html" %}
     </nav>
-    <p class="copyright">&copy;&nbsp;copyright 2009&nbsp;to&nbsp;{{ "" | getCurrentYear }}</p>
+    <br>
     <address class="adr">
-        <span class="org">tempertemper Web Design Ltd</span>
-        <span class="extended-address">Clavering House</span>,
-        <span class="street-address">Clavering Place</span>,
-        <span class="locality">Newcastle upon Tyne</span>,
-        <span class="postal-code">NE1 3NG</span>,&nbsp;<span class="country-name">UK</span>
+        <span class="org">{{site.author.name}}</span>
+        <span class="org">{{site.adress.name}}</span>
+        <span class="street-address">{{site.adress.street}}</span>,
+        <span class="locality">{{site.adress.city}}</span>,
+        <span class="country-name">{{site.adress.country}}</span>
     </address>
-    <p class="company-details">Company number 07742506</p>
-    <p class="company-details">VAT&nbsp;registration number&nbsp;219&nbsp;5624&nbsp;96</p>
     <ul class="utility">
-        <li><a href="/privacy-policy">Privacy policy</a></li>
-        <li><a href="/accessibility-statement">Accessibility statement</a></li>
-        <li><a href="/terms">Terms&nbsp;of&nbsp;business</a></li>
-        <li><a href="https://github.com/tempertemper/tempertemper.net/blob/master/{{ page.inputPath }}">Edit this page on GitHub</a></li>
+        <li><a href="/privacy-policy">Privacy Policy</a></li>
+        <li><a href="/accessibility-statement">Accessibility Statement</a></li>
+        <li><a href="{{site.repo}}/blob/master/{{ page.inputPath }}">Edit this page on GitHub</a></li>
     </ul>
 </footer>
