--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -47,10 +47,12 @@ layout: base.html
     <p>Here's a glimps of the courses I am currently active in:</p>
     <div>
     <iframe
+    id="current-teaching"
     title="View of courses Sarah is teaching currently or in the near future."
     src="https://online.uni-graz.at/kfu_online/wblvangebot.wbshowlvoffer?ppersonnr=72850"
     width="100%"
-    height="700">
+    height="700"
+    >
     </iframe>
     </div>
     <p>Have a look at the <a href="/teaching">full list of course</a> I teach.</p>
