--- a/src/site/_includes/header.html
+++ b/src/site/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <a href="/" class="logo">
-        {% include "svg/tempertemper-logo.svg" %}
+        {{site.title}}
     </a>
     <nav class="navigation" aria-label="primary">
         {% include "navigation-primary.html" %}
