--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -48,12 +48,12 @@ layout: base.html
     <div>
     <iframe
     id="current-teaching"
-    title="View of courses Sarah is teaching currently or in the near future."
-    src="https://online.uni-graz.at/kfu_online/wblvangebot.wbshowlvoffer?ppersonnr=72850"
+    title="Live view of courses Sarah is teaching now or the next term."
+    src="{{site.author.courses}}"
     width="100%"
     height="700"
     >
     </iframe>
     </div>
-    <p>Have a look at the <a href="/teaching">full list of course</a> I teach.</p>
+    <p>Check out the source of this embedded content at <a href="{{site.author.courses}}">Uni Graz Online</a> or have a look at the <a href="/teaching">full list of my courses</a>.</p>
 </section>
