--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -19,7 +19,7 @@ layout: base.html
 </article>
 
 <section aria-labelledby="my-research-focus">
-    <h2 id="my-research-focus">Areas of Interest</h2>
+    <h2 class="bg-sky-100" id="my-research-focus">Areas of Interest</h2>
     <p>There are a few topics that my work centers around:</p>
     <ul>
         <li><a href="/category/single-photon-sources">Single Photon Sources</a> is about quantum emitters emitting single photons.</li>
