--- a/src/site/_includes/header.html
+++ b/src/site/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="header">
+<header>
     <a href="/" class="logo">
         {{site.title}}
     </a>
-    <nav class="navigation" aria-label="primary">
+    <nav aria-label="primary">
         {% include "navigation-primary.html" %}
     </nav>
 </header>
