--- a/src/site/_layouts/base.html
+++ b/src/site/_layouts/base.html
@@ -3,14 +3,14 @@
     {% include "head.html" %}
     <body>
         <div class="wrapper">
-            <a href="#main" tabindex="0" class="skip-to-content">Skip to main content</a>
+            <!-- <a href="#main" tabindex="0" class="skip-to-content">Skip to main content</a> -->
             {% include "header.html" %}
             <main id="main" tabindex="-1">
                 {{ content | safe }}
                 {% if cta %}
                     {% include "call-to-action.html" %}
                 {% endif %}
-            </main>
+  </main>
             {% include "footer.html" %}
             <script>{% include "scripts.js" %}</script>
             <style>
