--- a/src/site/_includes/footer.html
+++ b/src/site/_includes/footer.html
@@ -1,27 +1,18 @@
-<footer class="footer">
-    <div class="social">
-        <a href="{{ site.author.linkedin }}">
-            {%- include "svg/LinkedIn.svg" -%}
-            Let's connect on LinkedIn
+    <footer class="grid grid-cols-2 gap-10 justify-items-center items-start md:grid-cols-4">
+        <a href="/" class="logo">
+            {{site.title}}
         </a>
-    </div>
-    <nav aria-label="repeated primary">
-        {% include "navigation-primary.html" %}
-    </nav>
-    <nav aria-label="secondary">
-        {% include "navigation-secondary.html" %}
-    </nav>
-    <br>
-    <address class="adr">
-        <span class="org">{{site.author.name}}</span>
-        <span class="org">{{site.adress.name}}</span>
-        <span class="street-address">{{site.adress.street}}</span>,
-        <span class="locality">{{site.adress.city}}</span>,
-        <span class="country-name">{{site.adress.country}}</span>
-    </address>
-    <ul class="utility">
-        <li><a href="/privacy-policy">Privacy Policy</a></li>
-        <li><a href="/accessibility-statement">Accessibility Statement</a></li>
-        <li><a href="{{site.repo}}/blob/master/{{ page.inputPath }}">Edit this page on GitHub</a></li>
-    </ul>
-</footer>
+        <nav aria-label="repeated primary">
+            {% include "navigation-primary.html" %}
+        </nav>
+        <nav aria-label="secondary">
+            {% include "navigation-secondary.html" %}
+        </nav>
+        <nav aria-label="utilities">
+            <ul>
+                <li><a href="/privacy-policy">Privacy</a></li>
+                <li><a href="/accessibility-statement">Accessibility</a></li>
+                <li><a href="{{site.repo}}/blob/master/{{ page.inputPath }}">Edit this page</a></li>
+            </ul>
+        </nav>
+    </footer>
