Fixed footer responsive capabilities.

--- a/src/site/_includes/footer.html
+++ b/src/site/_includes/footer.html
@@ -1,4 +1,4 @@
-    <footer class="grid grid-cols-2 gap-10 justify-items-center items-start md:grid-cols-4">
+    <footer>
         <a href="/" class="logo">
             {{site.title}}
         </a>
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="/privacy-policy">Privacy</a></li>
                 <li><a href="/accessibility-statement">Accessibility</a></li>
-                <li><a href="{{site.repo}}/blob/master/{{ page.inputPath }}">Edit this page</a></li>
+                <li><a href="{{site.repo}}/blob/master/{{ page.inputPath }}">Edit page</a></li>
             </ul>
         </nav>
     </footer>
