--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -15,7 +15,8 @@
 
 @layer base {
   header {
-    @apply font-bold leading-6 flex flex-row justify-between py-2 sm:py-4 md:py-8 lg:py-10;
+    @apply font-bold leading-6 text-sm sm:text-base ;
+    @apply flex flex-col gap-y-4 md:flex-row justify-between py-2 sm:py-4 md:py-8 lg:py-10;
 
     .logo {
       @apply link link-primary link-hover;
@@ -27,12 +28,12 @@
   }
 
   header ul {
-    @apply flex flex-row gap-4 sm:gap-6 md:gap-8 lg:gap-10 whitespace-nowrap;
+    @apply flex flex flex-wrap gap-2 sm:gap-6 md:gap-8 lg:gap-10 whitespace-nowrap;
   }
 
   footer {
     @apply font-semibold leading-6 text-sm;
-    @apply flex justify-between py-10 sm:py-10 md:py-16 lg:py-20;
+    @apply flex justify-between py-10 sm:py-12 md:py-16 lg:py-20;
     @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-y-4 sm:gap-y-6 md:gap-y-8 items-start;
 
     .logo {
