--- a/src/site/_layouts/home.html
+++ b/src/site/_layouts/home.html
@@ -46,13 +46,12 @@ layout: base.html
 <section aria-labelledby="my-teaching-focus">
     <h2 id="my-teaching-focus">Current Teaching</h2>
     <p>Here's a glimps of the courses I am currently active in:</p>
-    <div>
+    <div class="not-prose">
     <iframe
+            class ="w-full h-96"
     id="current-teaching"
     title="Live view of courses Sarah is teaching now or the next term."
     src="{{site.author.courses}}"
-    width="100%"
-    height="700"
     >
     </iframe>
     </div>
