--- a/src/site/_includes/head.html
+++ b/src/site/_includes/head.html
@@ -115,6 +115,9 @@
             {{css | postcss | safe}}
         </style>
 
+    <!-- Alpine JS -->
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.0/dist/cdn.min.js"></script>
+
     <script type="application/ld+json">
         {
             "@context" : "https://schema.org",
