--- a/src/site/_layouts/publication.html
+++ b/src/site/_layouts/publication.html
@@ -17,9 +17,9 @@ layout: base.html
         </p>
     </section>
     <section aria-label="Citation details" class="post-details">
-        {% bibtex %}
-            {{ bibitem | safe }}
-        {% endbibtex %}
+        <!-- {% bibtex %} -->
+        <!--     {{ bibitem | safe }} -->
+        <!-- {% endbibtex %} -->
     </section>
     <div itemprop="mainEntityOfPage">
         {{ content | safe }}
