--- a/src/tailwind/critical.scss
+++ b/src/tailwind/critical.scss
@@ -1,3 +1,4 @@
+@import url('https://cdn.jsdelivr.net/npm/prism-themes@1.5.0/themes/prism-material-light.css');
 
 @tailwind base;
 @tailwind components;
