Greatly improved usage of bibtex in the project.

--- a/src/site/_includes/post-in-list.html
+++ b/src/site/_includes/post-in-list.html
@@ -18,7 +18,7 @@
             <!-- <p class="details"> -->
             <!--     {% include "post-citation.html" %} -->
             <!-- </p> -->
-            {%- set menu = post.data.menu %}
+            {% set menu = post.data.menu %}
             {% include "post-menu.html" %}
 
         {% elif post.data.tags.includes('dissemination') %}
